# slos

./: .clang-format  .clang-format-ignore  .editorconfig  .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  Makefile  README.md  build-cmake.sh  gdbinit  gdbinit_mp  gdbinit_zynq  jenkins_slos.js  prep.sh  setup-cmake.sh
8x26tools/t32/: msm8x26.ts2  t32sim.cmd  t32start.cmd
8x26tools/t32/MSM8x26/: target_sysup.cmm
8x26tools/t32/MSM8x26/Android/: debug_auto_adsp.cmm  debug_auto_ap.cmm  debug_auto_dsps.cmm  debug_auto_q6sw.cmm  debug_auto_rpm.cmm  loadlogs_lpass.cmm  loadlogs_q6sw.cmm  loadsym_btl_no_en.emm  lpass_ramdump_setting_ui.emm  q6sw_ramdump_setting_ui.emm  reset.cmm  target.cmm  target_flash_emmc.cmm  target_view.cmm
8x26tools/tools/cmm/: corefcc.t32  std_toolsconfig.cmm
8x26tools/tools/cmm/common/: std_buildoptions.cmm  std_cti.cmm  std_flushcache.cmm  std_intercom_do.cmm  std_intercom_dodecrypt.cmm  std_mapbuilds.cmm  std_platinfo.cmm  std_utils.cmm
8x26tools/tools/cmm/config/: DAP_ADSP.cmm  DAP_APPS.cmm  DAP_MPSS.cmm  DAP_RPM.cmm  DAP_VPU.cmm  DAP_VSS.cmm  DAP_WCNSS.cmm  startup.cmm
8x26tools/tools/gensecimage/: README.txt  gensecimage.py  gensecimage_w7ds.py  gensecimageconfig.py  mbn_tools.py
8x26tools/tools/gensecimage/qpsa/: qpsa.py
8x26tools/tools/gensecimage/ssd/: ReadMe.txt  gen_keys.py  gen_keystore.py  gen_ssd_bin.py  key_config_parser.py
8x26tools/tools/meta/: gen_cmm_data3.py  meta_lib.py  meta_log.py
8x26tools/tools/ramdump-parser/: ClockTestDict.py  README  TzDumpParser.py  cachedump.py  classfication.py  clock_parser.py  debug_image.py  dmesg.py  event-log-tags  gpuinfo.py  iommu.py  irqstate.py  linux_list.py  logger.py  mm.py  ocmem_parser.py  pagetypeinfo.py  pmic_parser.py  print_out.py  qdss.py  ramconsole.py  ramdump.py  ramparse.bat  ramparse.py  rb_tree.py  rbcpr_parser.py  rpm_log_bfam.py  rpm_parser.py  rpm_ulogdump.py  rtb.py  slabinfo.py  target_data.py  taskdump.py  unwind.py  vmalloc.py  watchdog.py  workqueue.py
8x26tools/tools/recovery/e7_8_10wifi/: MPRG8626.mbn  Qualcomm HS-USB Diagnostics 9006(All).bat  (+10 more)
8x26tools/tools/redhat-crash/: usuage.txt
apps/: CMakeLists.txt  Makefile  apps.dox  helloworld.c
bins/: fsbl_hook.elf  fsbl_zynqmp_jumptoslos.elf  genesis.bit  genesis.xsa  genesis_2019.2.bit  genesis_2019.2.xsa  genesis_2022.1.bit  genesis_2023.bit  genesis_mp_2023.bit  kernel.elf  kernel32.elf  ramdisk.img  zynq_fsbl.elf
cmake/: aarch64-none-elf.cmake  arm-none-eabi.cmake
coproc/modcore_1.0/hdl/: modcore_v1_0.vhd  modcore_v1_0_M00_AXI.vhd  swathcore_v1_0.vhd  swathcore_v1_0_M00_AXI.vhd  swathcore_v1_0_S00_AXI.vhd
doc/: Doxyfile  doxyfile  getting_started.dox  mainpage.dox  slos_layout.xml
genesis/: create_genesis_project.bat  create_genesis_project.sh  genesis.dox
genesis/ip_repo/genDMA_1.0/: component.xml
genesis/ip_repo/modcore_1.0/: component.xml
genesis/ip_repo/odev_1.0/: component.xml
genesis/sources/constraints/: genesis.xdc
genesis/sources/vivado_tcl_scripts/: build.tcl
genesis_mp/: create_genesis_mp_project.sh  genesis_mp.dox
genesis_mp/sources/constraints/: gpio.xdc  system.xdc
helloworld/: helloworld.c
kernel/: CMakeLists.txt  Kconfig  Makefile  arm-none-eabi.cmake  defconfig  kernel.dox  zynqmp_defconfig
kernel/arch/: CMakeLists.txt  qgic.c
kernel/arch/ca-53/: CMakeLists.txt  Kconfig  gic_v2.c  main.c  vector.S
kernel/arch/ca-9/: CMakeLists.txt  Kconfig  cache.S  gic.c  gic_390.c  gic_v1.c  init-mm.S  init_mm_s.S  ops.S  smp-reset.S  smp-vector.S  vector.S
kernel/arch/common/: CMakeLists.txt  gic.c
kernel/arm/: faults.c  gic.c  init-mm.S  mon.S  ops.S  smp-init-mm.S  smp-reset.S  smp-vector.S  timer.c  vector.S
kernel/ca-9/: cache.S  gic.c  init-mm.S  init_mm_ns.S  monitor.S  ops.S  smp_vector.S  vectors_ns.S  vectors_s.S
kernel/configs/: zynq7000_defconfig
kernel/core/: CMakeLists.txt  cache.S  debug.c  faults.c  file.c  file_system.c  frame_pool.c  frame_pool.cpp  gic.c  initrd.S  kernel_mc.c  kernel_mc.cpp  ktimer.c  loader.c  locks.c  mailbox.c  main.c  main64.c  mm.c  mmu.c  msgQ.c  ops.S  page_table.c  page_table.cpp  percpu.c  printk.c  ramdisk_io.c  rbtree.c  runq.c  sched.c  sgi.c  slmm.c  smm.c  smm.cpp  smp-mm.c  task.c  timer.c  vm_pool.c  vm_pool.cpp  wait.c  (+2 more)
kernel/core64/: CMakeLists.txt  main64.c
kernel/drivers/: CMakeLists.txt
kernel/drivers/clock/: acpuclock.c  clock.c  msm8226-clock.c
kernel/drivers/dma/: dma.c
kernel/drivers/gpio/: gpio.c
kernel/drivers/iostream/: ostream.c
kernel/drivers/odev/: odev.c
kernel/drivers/ramdisk/: ramdisk_io.c
kernel/drivers/uart/: debug.c  rwbyte.c  uart.c  uart_dm.c
kernel/drivers/xil_standalone/: inbyte.c
kernel/dts/: gen_defs.py  slos-devices.dts
kernel/dts/zynq-7000/: slos-devices.dts
kernel/dts/zynq7000/: slos-devices.dts  zynq-7000.dtsi
kernel/dts/zynqmp/: slos-devices-mp.dts  zynqmp.dtsi
kernel/exception/: boot.S  faults.c  faults.cpp  init_mm.S  kernel.S  monitor.S  nonsec_start.S  sec_start.S  xil-crt0.S
kernel/fs/: CMakeLists.txt  file.c  fs.c  initrd.S  slfs.c
kernel/fs/slfs/: slfs.c
kernel/inc/: acpuclock.h  bits.h  clock.h  debug.h  definitions.h  defs.h  device.h  dma.h  elf-em.h  elf.h  error.h  file.h  file_system.h  frame_pool.h  fs.h  gic.h  gic_v1.h  gic_v2.h  gpio.h  gsbi.h  iomap.h  iostream.h  irqs.h  ktimer.h  loader.h  locks.h  mailbox.h  mem_layout.h  mm.h  msgQ.h  msm8226-clock.h  odev.h  ops.h  page_table.h  percpu.h  percpudef.h  printk.h  ramdisk_io.h  rbtree.h  rbtree_augmented.h  (+19 more)
kernel/inc/arch/: qgic.h
kernel/libs/: CMakeLists.txt  lib.c
kernel/linker/: kernel.lds  kernel32.lds  kernel64.lds
kernel/scripts/: gen_devicetree_defs.py  gen_kconfig_defs.py
lib/: print_mesg.c  syscall.S
libslos/: CMakeLists.txt  Makefile  libslos.dox  print_mesg.c  syscall.S
libxil/: Makefile
libxil/include/: xil_io.h  xparameters.h  xplatform_info.h
misc/: emmc_appsboot_jump_to_pilot.mbn  mkbootimg
mkappfs/: mkappfs.cpp
mkfs/: CMakeLists.txt  Makefile  mkfs.cpp  mkfs.dox
test1/: usertest1.c
test2/: usertest2.c
worker/: worker.c
(+228 files in other folders)
